Improved the nav bar , profile icon , change theme button overflow fixed.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -576,7 +576,8 @@ body {
   border-radius: 50%;
   overflow: hidden;
   cursor: pointer;
-  right: 8rem;
+  right: 15rem;
+  bottom : 13px;
 }
 
 .action .profile img {
@@ -728,7 +729,7 @@ body {
   transition: all 0.3s ease;
 }
 .logopic:hover {
-  transform: scale(1.3); /* Makes the logo 20% larger on hover */
+  transform: scale(1.09); /* Makes the logo 20% larger on hover */
 }
 
 @media (max-width: 768px) {
@@ -3541,8 +3542,10 @@ footer {
   padding: 0 5px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: background-color 0.5s ease;
-  left: 250px; /* Adjust to move it to the right */
+  /* Adjust to move it to the right */
   margin-bottom: 14px;
+  left: 63px;
+  top: 60px;
 }
 
 .switch-label .sun-icon,
